create navbar and empty About and Contact Us pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,8 @@
 
     <title>{{ site.title | escape }}{% if page.title %} &ndash; {{ page.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 </head>
