--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,20 @@
+<ul id="dropdown" class="dropdown-content">
+    {% for the_page in site.pages %}
+    {% if the_page.title %}
+    <li><a href="{{ the_page.url | relative_url }}">{{ the_page.title | escape }}</a></li>
+    {% endif %}
+    {% endfor %}
+</ul>
 <nav class="blue darken-4">
     <div class="navbar">
         <a id="page-title" class="left white-text" href="{{ '/' | relative_url }}">AIM Robotics</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <ul id="nav-mobile" class="right">
             {% for the_page in site.pages %}
             {% if the_page.title %}
-            <li class="{% if the_page.permalink == page.permalink %}active{% endif %}"><a href="{{ the_page.url | relative_url }}">{{ the_page.title | escape }}</a></li>
+            <li class="hide-on-med-and-down {% if the_page.permalink == page.permalink %}active{% endif %}"><a href="{{ the_page.url | relative_url }}">{{ the_page.title | escape }}</a></li>
             {% endif %}
             {% endfor %}
+            <li class="hide-on-large-only"><a class="dropdown-button" href="#!" data-activates="dropdown"><i class="material-icons">arrow_drop_down</i></a></li>
         </ul> 
     </div>
 </nav>
