--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <body>
 
         {% if page.use_hero %}
-        {% include hero-header.html %}
+        {% include hero.html %}
         {% else %}
         {% include navbar.html %}
         {% endif %}
