--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,5 @@
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    <script src="{{ '/assets/navbar.js' | relative_url }}"></script>
+    <script src="{{ '/assets/main.js' | relative_url }}"></script>
 </head>
