wider dropdown in navbar

--- a/assets/main.css
+++ b/assets/main.css
@@ -21,7 +21,7 @@ nav {
 }
 
 #dropdown {
-    width: auto !important;
+    width: 10rem !important;
 }
 
 .carousel.carousel-slider .carousel-item img {
