--- a/assets/main.css
+++ b/assets/main.css
@@ -24,11 +24,14 @@ nav {
     width: 10rem !important;
 }
 
+.carousel.carousel-slider .carousel-item {
+    height: calc(100vh - 50px);
+}
+
 .carousel.carousel-slider .carousel-item img {
     opacity: 0.5;
     filter: alpha(opacity=50);
-    height: calc(100vh - 50px);
-    max-width: 100%;
+    height: 100%;
     width: auto;
 }
 
@@ -37,7 +40,7 @@ nav {
 }
 
 .carousel.carousel-slider .carousel-fixed-item.with-indicators {
-    bottom: 30vh;
+    bottom: 30%;
 }
 
 #hero-intro-text {
@@ -50,4 +53,17 @@ nav {
 
 main {
     margin: 60px 0;
+}
+
+@media (max-aspect-ratio: 16/9) {
+    .carousel.carousel-slider .carousel-item img {
+        width: 100%;
+        height: auto;
+    }
+    #hero-intro-text {
+        font-size: 2.5rem;
+    }
+    #hero-title {
+        font-size: 3rem;
+    }
 }
