--- a/assets/main.css
+++ b/assets/main.css
@@ -72,6 +72,26 @@ main {
     margin: 60px 0;
 }
 
+h1.section-title {
+    padding-bottom: 3px;
+}
+
+h1.section-title:after {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    height: 3px;
+    width: 0;
+    background-color: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+
+.underline:after {
+    width: 20rem !important;
+    max-width: 70%;
+    background-color: black !important;
+}
+
 @media (max-aspect-ratio: 16/9) {
     .slides li img {
         width: 100%;
