--- a/assets/main.css
+++ b/assets/main.css
@@ -93,6 +93,16 @@ h1.section-title:after {
     background-color: black !important;
 }
 
+#news-div {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 40rem;
+}
+
+#news-div .card-panel {
+    margin-top: 30px;
+}
+
 .footer-copyright {
     padding-bottom: 5px;
     line-height: 2;
