--- a/assets/main.css
+++ b/assets/main.css
@@ -30,7 +30,7 @@ nav {
 }
 
 .slides {
-    height: calc(100vh - 80px) !important;
+    height: calc(100vh - 50px) !important;
 }
 
 .slides li {
@@ -50,6 +50,11 @@ nav {
     bottom: 30%;
     left: 0;
     right: 0;
+}
+
+.slider .indicators {
+    z-index: 10;
+    height: 50px;
 }
 
 .slider .indicators .indicator-item {
