--- a/assets/main.css
+++ b/assets/main.css
@@ -58,7 +58,7 @@ nav {
 }
 
 .slider .indicators .indicator-item {
-    background-color: #666;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .slider .indicators .indicator-item.active {
