--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,17 +6,19 @@
     {% endfor %}
     <li><a class="teal-text text-darken-3" href="https://github.com/FRC-1123">GitHub</a></li>
 </ul>
-<nav class="{% if page.use_hero %}black{% else %}blue darken-4{% endif %}">
-    <div class="navbar">
-        <a id="page-title" class="left white-text" href="{{ '/' | relative_url }}">AIM Robotics</a>
-        <ul id="nav-mobile" class="right">
-            {% for the_page in site.pages %}
-            {% if the_page.title %}
-            <li class="hide-on-med-and-down {% if the_page.permalink == page.permalink %}active{% endif %}"><a href="{{ the_page.url | relative_url }}">{{ the_page.title | escape }}</a></li>
-            {% endif %}
-            {% endfor %}
-            <li class="hide-on-med-and-down"><a href="https://github.com/FRC-1123"><i class="fa fa-github"></i></a></li>
-            <li class="hide-on-large-only"><a class="dropdown-button" href="#!" data-activates="dropdown"><i class="material-icons">arrow_drop_down</i></a></li>
-        </ul> 
-    </div>
-</nav>
+<div class="navbar-fixed">
+    <nav class="{% if page.use_hero %}fade-color-nav{% else %}blue darken-4{% endif %}">
+        <div class="navbar">
+            <a id="page-title" class="left white-text" href="{{ '/' | relative_url }}">AIM Robotics</a>
+            <ul id="nav-mobile" class="right">
+                {% for the_page in site.pages %}
+                {% if the_page.title %}
+                <li class="hide-on-med-and-down {% if the_page.permalink == page.permalink %}active{% endif %}"><a href="{{ the_page.url | relative_url }}">{{ the_page.title | escape }}</a></li>
+                {% endif %}
+                {% endfor %}
+                <li class="hide-on-med-and-down"><a href="https://github.com/FRC-1123"><i class="fa fa-github"></i></a></li>
+                <li class="hide-on-large-only"><a class="dropdown-button" href="#!" data-activates="dropdown"><i class="material-icons">arrow_drop_down</i></a></li>
+            </ul> 
+        </div>
+    </nav>
+</div>
