--- a/assets/main.css
+++ b/assets/main.css
@@ -2,9 +2,17 @@ body {
     font-weight: 300;
 }
 
+.navbar-fixed {
+    height: 50px;
+}
+
 nav {
     height: 50px;
     line-height: 50px;
+}
+
+.fade-color-nav {
+    background-color: black;
 }
 
 .navbar {
