--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-{{ page.date | date: "%B %-d, %Y" }}
+<span class="grey-text">{{ page.date | date: "%B %-d, %Y" }}</span>
 <br>
 <br>
 {{ content }}
