add typed animation to hero

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,5 +1,5 @@
 <div class="slider">
-    <div class="slider-text center white-text"><span id="hero-intro-text">We are</span><br><span id="hero-title">AIM Robotics</span></div>
+    <div class="slider-text center white-text"><span id="hero-intro-text">We are</span><br><span id="hero-title" class="typed"></span></div>
     <ul class="slides">
         {% for image in site.static_files %}
         {% if image.path contains 'img/slider' %}
