--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
-<span class="grey-text">{{ page.date | date: "%B %-d, %Y" }}</span>
+<h1 class="center">{{ page.title }}</h1>
+<div class="grey-text center">{{ page.date | date: "%B %-d, %Y" }}</div>
 <br>
 <br>
 {{ content }}
