--- a/assets/main.css
+++ b/assets/main.css
@@ -142,6 +142,10 @@ main {
     margin-top: 30px;
 }
 
+.parallax-container {
+    max-height: 50vh;
+}
+
 .prev-next-divider {
     margin-top: 70px;
 }
