--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,7 @@
 body {
     font-weight: 300;
+    font-size: 1.1rem;
+    line-height: 1.7;
 }
 
 .navbar-fixed {
@@ -132,6 +134,10 @@ main {
     background-color: black !important;
 }
 
+.justified {
+    text-align: justify;
+}
+
 #news-div {
     margin-left: auto;
     margin-right: auto;
@@ -211,7 +217,14 @@ main {
     }
 }
 
-@media (max-width: 600px) {
+@media only screen and (min-width: 601px) {
+    .section.index-section {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
     .slider-text {
         bottom: 45%;
     }
