--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% if page.is_index %}
+    <link rel="stylesheet" href="{{ '/assets/index.css' | relative_url }}">
+    {% else %}
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+    {% endif %}
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    {% if page.is_index %}
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.3.4/scrollreveal.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.4.3/velocity.ui.min.js"></script>
+    <script type="text/javascript" src="{{ '/assets/index.js' | relative_url }}"></script>
+    {% else %}
     <script type="text/javascript" src="{{ '/assets/main.js' | relative_url }}"></script>
+    {% endif %}
 </head>
