use lora for post content

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
     {% if page.is_index %}
     <link rel="stylesheet" href="{{ '/assets/index.css' | relative_url }}">
     {% else %}
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     {% endif %}
 
