--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ layout: default
 <div class="grey-text center">{{ page.date | date: "%B %-d, %Y" }}</div>
 <br>
 <br>
-{{ content }}
+<div class="post-content">
+    {{ content }}
+</div>
 
 <div class="divider prev-next-divider"></div>
 <div class="section row prev-next-div">
