--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<h1 class="center">{{ page.title }}</h1>
-<div class="grey-text center">{{ page.date | date: "%B %-d, %Y" }}</div>
+<h2 class="center">{{ page.title }}</h2>
+<div class="grey-text center author">Posted on {{ page.date | date: "%B %-d, %Y" }} by {{ page.author }}</div>
 <br>
 <div class="post-content">
     {{ content }}
