--- a/assets/main.css
+++ b/assets/main.css
@@ -113,6 +113,10 @@ form button {
     margin-bottom: 50px;
 }
 
+.author {
+    font-size: 1rem;
+}
+
 .post-content {
     font-family: "Lora", serif;
     font-size: 1.2rem;
