--- a/assets/index.css
+++ b/assets/index.css
@@ -160,13 +160,13 @@ main {
     margin: 20px 0;
 }
 
-#news-div {
+.news-div {
     margin-left: auto;
     margin-right: auto;
     max-width: 40rem;
 }
 
-#news-div .card-panel {
+.news-div .card-panel {
     visibility: hidden;
     margin-top: 30px;
 }
