--- a/assets/main.css
+++ b/assets/main.css
@@ -62,6 +62,17 @@ main {
     text-align: justify;
 }
 
+.news-div {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 40rem;
+}
+
+.pagination {
+    margin-top: 30px;
+    font-size: 1.3rem;
+}
+
 .parallax-container {
     max-height: 50vh;
     margin-bottom: 40px;
