add box-shadow to news cards on hover

--- a/assets/main.css
+++ b/assets/main.css
@@ -68,6 +68,10 @@ main {
     max-width: 40rem;
 }
 
+.news-div .card-panel:hover {
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+}
+
 .pagination {
     margin-top: 30px;
     font-size: 1.3rem;
