--- a/assets/index.css
+++ b/assets/index.css
@@ -171,6 +171,10 @@ main {
     margin-top: 30px;
 }
 
+.news-div .card-panel:hover {
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+}
+
 .parallax-container {
     max-height: 50vh;
 }
