--- a/assets/main.css
+++ b/assets/main.css
@@ -72,6 +72,11 @@ main {
     box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
 }
 
+.news-div .chip {
+    height: 26px;
+    line-height: 26px;
+}
+
 .pagination {
     margin-top: 40px;
     font-size: 1.4rem;
