--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,7 @@
             </div>
         </main>
 
-        <footer class="footer-copyright blue darken-4 white-text center-align">
-            Made with &nbsp;<i class="material-icons red-text text-lighten-2 tooltipped animated infinite pulse" data-position="top" data-delay="0" data-tooltip="Thanks for visiting!">favorite</i>&nbsp; by Charles Zhao
-        </footer>
+        {% include footer.html %}
 
     </body>
 
