--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
             </div>
         </main>
 
+        {% if page.is_index %}
         {% include footer.html %}
+        {% endif %}
 
     </body>
 
