adjust prev-next button spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -147,7 +147,7 @@ form button {
 }
 
 .prev-next-div .btn-floating {
-    margin: 0 10%;
+    margin: 20px 10% 0 10%;
 }
 
 .prev-next-div .btn-floating i {
