--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
     {% endif %}
     {% endunless %}
     {% endfor %}
-    <li><a class="light-blue-text text-accent-4" href="https://github.com/FRC-1123">GitHub</a></li>
+    <li><a class="light-blue-text text-accent-4" href="https://github.com/FRC-1123" target="_blank" rel="noopener noreferrer"><i class="material-icons right">open_in_new</i>GitHub</a></li>
 </ul>
 <div class="navbar-fixed">
     <nav class="{% if page.is_index %}fade-color-nav{% else %}blue darken-4{% endif %}">
@@ -20,7 +20,7 @@
                 {% endif %}
                 {% endunless %}
                 {% endfor %}
-                <li class="hide-on-med-and-down"><a href="https://github.com/FRC-1123"><i class="fa fa-github"></i></a></li>
+                <li class="hide-on-med-and-down"><a href="https://github.com/FRC-1123" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a></li>
                 <li class="hide-on-large-only"><a class="dropdown-button" href="#!" data-activates="dropdown"><i class="material-icons">arrow_drop_down</i></a></li>
             </ul> 
         </div>
