--- a/assets/index.css
+++ b/assets/index.css
@@ -155,9 +155,19 @@ main {
     font-weight: 400;
 }
 
+.divider {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .sponsors-div img {
     width: 100%;
-    margin: 20px 0;
+    margin-top: 50px;
 }
 
 .news-div {
